Fix form CSS (top position, width of select on smaller screens)

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -98,7 +98,7 @@ option {
 }
 
 select {
-  max-width: 11rem; 
+  max-width: 11rem;
 }
 
 .overlay {
@@ -120,7 +120,7 @@ select {
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 80vh;
 
   &__header {
     display: flex;
